src/objects/ACCL__Mobile_Link__c.object
<CustomObject>
    <description>Deep Link Object</description>
    <fields>
        <fullName>ACCL__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Only Active Records must be relevant for display</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACCL__Asset_Id__c</fullName>
        <label>Asset Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Asset_Type__c</fullName>
        <label>Asset Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>dashboard</fullName>
                </value>
                <value>
                    <fullName>lens</fullName>
                </value>
                <value>
                    <fullName>application</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__Dashboard_State__c</fullName>
        <label>Dashboard State</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ACCL__Description_Language_1__c</fullName>
        <description>Language dependent description 1</description>
        <label>Description Language 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Description_Language_2__c</fullName>
        <description>Language dependent description 2</description>
        <label>Description Language 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Description_Language_3__c</fullName>
        <description>Language dependent description 3</description>
        <label>Description Language 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Description__c</fullName>
        <formula>CASE($User.ACCL__Language_Postfix__c,
&quot;Language1&quot;, ACCL__Description_Language_1__c,
&quot;Language2&quot;, ACCL__Description_Language_2__c,
&quot;Language3&quot;, ACCL__Description_Language_3__c,
&quot;Language4&quot;, ACCL__Description_Language_4__c,
ACCL__Description_Language_1__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Display_In__c</fullName>
        <label>Display In</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Your Day</fullName>
                </value>
                <value>
                    <fullName>Store Cockpit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__Login_Host__c</fullName>
        <label>Login Host</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Org_Id__c</fullName>
        <label>Org Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Record_Type_Name__c</fullName>
        <formula>RecordType.DeveloperName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Type Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Sales_Org__c</fullName>
        <description>Describes the Sales Org which the Deep Links belongs to.</description>
        <label>Sales Org</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>ACCL__Sales_Org</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__Scheme_Name__c</fullName>
        <label>Scheme Name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>sfanalytics</fullName>
                </value>
                <value>
                    <fullName>salesforce1</fullName>
                </value>
                <value>
                    <fullName>ms-onedrive</fullName>
                </value>
                <value>
                    <fullName>whatsapp</fullName>
                </value>
                <value>
                    <fullName>https</fullName>
                </value>
                <value>
                    <fullName>ms-teams://</fullName>
                </value>
                <value>
                    <fullName>ms-outlook</fullName>
                </value>
		<value>
                    <fullName>com.traxretail.traxretail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__Sort__c</fullName>
        <description>Sort Order of displayable deep links record within a call</description>
        <label>Sort</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ACCL__URL__c</fullName>
        <label>URL</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Mobile Link</label>
    <listViews>
        <fullName>ACCL__All</fullName>
        <columns>NAME</columns>
        <columns>ACCL__Description__c</columns>
        <columns>ACCL__Active__c</columns>
        <columns>ACCL__Sort__c</columns>
        <columns>ACCL__Scheme_Name__c</columns>
        <columns>ACCL__Display_In__c</columns>
        <columns>ACCL__Sales_Org__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Mobile Link Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Mobile Links</pluralLabel>
    <recordTypes>
        <fullName>ACCL__Einstein_Analytics</fullName>
        <active>true</active>
        <label>Analytics</label>
    </recordTypes>
    <recordTypes>
        <fullName>ACCL__Quick_Access</fullName>
        <active>true</active>
        <label>Quick Access</label>
    </recordTypes>
    <recordTypes>
        <fullName>D4GV</fullName>
        <active>true</active>
        <description>for D4GV related dashboard link</description>
        <label>D4GV</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>ACCL__Dashboard_State_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT(ISPICKVAL(ACCL__Asset_Type__c, &quot;Dashboard&quot;)), NOT(ISBLANK(ACCL__Dashboard_State__c)))</errorConditionFormula>
        <errorMessage>Date Value can only be provided if Asset Type is &apos;Dashboard&apos;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ACCL__Prevent_Changing_of_Sales_Org</fullName>
        <active>true</active>
        <description>The Sales Org can&apos;t be edited after Mobile Link creation.</description>
        <errorConditionFormula>ISCHANGED(ACCL__Sales_Org__c)</errorConditionFormula>
        <errorMessage>The Sales Org can&apos;t be edited after Mobile Link creation.</errorMessage>
    </validationRules>
</CustomObject>